Expressions and statments
Values and data tapes

type(123)
<class 'int'>

type(True)
<class 'bool'>

type(False)
<class 'bool'>

type(123.34)
<class 'float'>

type(234.234)
<class 'float'>

type("2343566")
<class 'str'>

type("Wello World")
<class 'str'>

type('one Million fifty thousand ')
<class 'str'>

type('He looked at her and said "solid work is crucial for advancing in every aspect of life"')
<class 'str'>



type("tell"02734855)
   File "<input>", line 1
     type("tell"02734855)
                     ^
SyntaxError: invalid token

Variables

To define variables we can use long names and numbers but name
has too start from a letter. We can't use special signs
for variables names.

message="that's very interesting point sir"
n=123
pi=3.145
twelve="why,what,where?"

type(n)
<class 'int'>

type(pi)
<class 'float'>

type(twelve)
<class 'str'>

type(message)
<class 'str'>

Keywords

Python has thirty three keywords

and-logic operator which returns True if only both values are true.

as - as is used to create an alias while importing a module

assert - is used for debugging purpose.
break - is used inside FOR and WHILE loops. BREAK will end small loop in its flows to the statment below the loop
class
continue
def
del
elif
else
except
exec
finally
for
from
global
if
import
in
is
lambda

not- logic operator used to invert value.
True == (not False)
True

or- logic operator which returns True if both values are true. If one value is true, returns this value, otherwise return False.
pass
print
raise
return
try
while
with
yield


len counts list elements
sum adds the iterable items

iterator
iteration
